hnfp/static/hnfp/css/style.css
/* ... */
.section-footer .home-mid .col {
    margin-bottom: 0;
}

.parallax-container {
    height: 400px;
    width: 100%;
}

.home-page .home-cta {
    font-size: 1.5rem;
    line-height: 6rem;
    padding: 0 1.5rem;
}

.home-page .home-cta i {
    font-size: 2.5em;
    line-height: 6rem;
}

.home-page .cta-fixed-width {
    border: 8px solid #e4efee;
    color: #2b384a;
    font-family: 'function', sans-serif;
    font-weight: normal;
    font-size: .75em;
    height: 43.5vw;
    margin: 0 auto 3rem;
    padding: 10px;
    width: 43.5vw;
}

.home-page .cta-round div:first-child,
.home-page .cta-round div:nth-child(2) {
    margin-top: 3rem;
}

.home-page .cta-fixed-width:hover {
    border: 8px solid #e8f5f3;
}

.home-page .cta-round img {
    height: 36%;
    margin: 12% auto 8%;
    width: auto;
}

.logo-ecotrust {
    max-width: 180px;
}

.logo-row img.responsive-img {
    max-height: 70px;
    margin-bottom: 1rem;
    max-width: 100px;
}

.logo-row img.hoonah-logo.responsive-img {
    max-width: 200px;
}

.observations .hero-bg:before {
    background-color: rgba(93, 133, 183, 0.3);
}

.alerts .hero-bg:before {
    background-color: rgba(213, 63, 56, 0.3);
}

.forum .hero-bg:before {
    background-color: #dfeceb;
}

/*--------------------
dashboard
--------------------*/

.dashboard .bg,
.hero-bg {
    height: 4rem;
    overflow: hidden;
    position: relative;
    width: 100%;
}

.dashboard .bg:before,
.dashboard .bg:after,
.hero-bg:before,
.hero-bg:after {
    content: '';
    position: absolute;
}

.dashboard .bg:before,
.hero-bg:before {
    background-color: #dfeceb;
    /* no need for background image right now
    background-image: url('/static/hnfp/img/bg_mountain.jpg');
    background-size: cover;
    background-attachment: local;
    background-position: 50%;
    */
    bottom: -2%;
    left: -2%;
    right: -2%;
    top: -2%;
    z-index: -1;
}

.dashboard .bg:after,
.hero-bg:after {
    background-image: url('/static/hnfp/img/mountain_ridge_white.svg');
    background-size: cover;
    bottom: 0%;
    height: 110%;
    left: -2%;
    min-width: 110%;
    z-index: -1;
}

.dashboard p {
    font-size: .8125em;
}

.dashboard h3 {
    font-size: .875em;
    line-height: 36px;
    margin: 0;
}

.dashboard h4 {
    font-size: 1em;
}

.dashboard h5 {
    font-size: 1.125em;
}

.dashboard .col.brand-logo {
    width: auto;
    padding-left: 0;
}
.dashboard .brand-logo img {
    height: 36px;
}

.events-section h4 {
    margin-bottom: 0.75rem;
}

.events-section h4 a,
.events-section h4 a i {
    vertical-align: middle;
}

.events-section p {
    font-size: .68375em;
    margin-bottom: .5rem;
}

.pre-footer {
    position: relative;
    padding: 2rem 0 5rem;
}

.pre-footer:after {
    background-image: url('/static/hnfp/img/mountain_ridge_blue.svg');
    background-size: 125% auto;
    background-position: 50% top;
    bottom: 0;
    content: '';
    height: 5rem;
    left: 0;
    position: absolute;
    width: 100%;
}

#tempchart {
    height: 200px;
    width: 80%;
}

#forecast,
#marine,
#tides {
    padding: 2rem 0;
    width: 100%;
    font-size: 1em;
    text-transform: capitalize;
}

#forecast-summary {
    font-size: 1.25em;
}

#forecast td,
#marine td,
#tides td {
    padding: 5px 8px;
}

.blog-roll h4 {
    font-size: 2em;
}

.blog-roll .brand-logo {
    display: inline-block;
    vertical-align: middle;
}

.blog-roll h4.num,
.blog-roll .comments p {
    display: inline-block;
    line-height: 1.75;
    margin: 0 5px;
    vertical-align: sup;
}

.blog-roll em {
    font-size: 1em;
}

.observation-block {
    margin-bottom: 2rem;
    padding: 2rem;
}

.observation-block .btn {
    font-size: .875em;
    margin: 2rem 0 1.5rem;
    padding: 0 0 0 1rem;
}

.observation-block .btn i {
    font-size: 3rem;
}

.observation-block p {
    text-align: center;
}

.observation-block img {
    display: block;
    margin: 0 auto;
    max-width: 50%;
}

.jobs {
    padding-top: 2rem;
}

.jobs h5 a {
    display: block;
    font-size: 2em;
    margin: 2rem 0;
}

.job-post {
    position: relative;
    margin: .75rem 0;
    padding: .75rem 0;
}

.job-post:after {
    background: #2b384a;
    bottom: 0;
    content: '';
    left: 40%;
    height: 5px;
    position: absolute;
    width: 20%;
}

.job-post:last-of-type {
    margin-bottom: 0;
    padding-bottom: 0;
}

.job-post:last-of-type:after {
    content: none;
}

.job-post h5 {
    color: #5d85b7;
    margin-bottom: .5rem;
}

/*--------------------
accounts
--------------------*/
div.mapgroup {
    display: block;
    margin: 3rem auto;
    width: 80%;
    max-width: 48rem;
}

div.mapgroup .col-md-1,
div.mapgroup h3 {
    display: none;
}

.accounts-form-wrap {
    border: none !important;
    margin: 0 auto !important;
}

.accounts-form-wrap h2,
.accounts-form-wrap hr {
    display: none;
}

.accounts-form-wrap .login-form > div {
    width: 100%;
}

.accounts-form-wrap .login-form .left-inner-addon input {
    padding-left: 0;
}

.card .card-image img.profile-img {
    width: 40px;
}

/*--------------------
map
--------------------*/

#map-wrapper {
    height: 320px;
    position: relative;
    max-height: 96vh;
    width: 100%;
}

#map,
#project-map {
    height: 100%;
    width: 100%;
}

.survey-map #map-wrapper {
    display: block;
    position: relative;
    height: 480px;
    width: 100%;
}

.survey-map #map {
    bottom: 0;
    left: 0;
    position: absolute;
    top: 0;
    right: 0;
    z-index: 9999;
}

#map-panel h3 {
    color: #d53f38;
    font-size: 1.3125em;
    text-transform: capitalize;
}

.dashboard .map-wrap {
    height: 300px;
    margin: 0 auto;
    overflow: hidden;
    position: relative;
    width: 94%;
}

.dashboard #map {
    bottom: 0;
    height: 100%;
    left: 0;
    position: absolute;
    width: 100%;
}

.alerts-wrap {
    position: relative;
}

.recent-alerts {
    overflow: hidden;
    width: 100%;
}

.add-to-map-section {
    margin-top: 2rem;
}

.SimpleLayerSwitcher {
    z-index: 0;
}
/* ... */

